# dear-diary

./: .gitignore  .gitmodules  Dockerfile  README.md  app.py  entries.py  pyproject.toml
.github/workflows/: docker-publish.yml
dear_diary/: __main__.py  config.py  main.py  utils.py
dear_diary/core/: config.py  database.py  utils.py
dear_diary/core/database/: __init__.py  base.py
dear_diary/core/database/backend/: __init__.py  base.py  chroma.py  git.py  multiple.py
dear_diary/core/models/: __init__.py  entry.py
dear_diary/static/css/: styles.css
dear_diary/static/js/: index.js
dear_diary/templates/: index.html
src/dear_diary/: main.py
src/dear_diary/core/: database.py
src/dear_diary/core/models/: entry.py
src/dear_diary/static/css/: styles.css
src/dear_diary/static/js/: index.js
src/dear_diary/templates/: index.html
static/css/: styles.css
static/js/: index.js
templates/: index.html
