[project]
name = "dear-diary"
version = "0.2.1"
description = "Add your description here"
authors = [{ name = "Zohar Cochavi", email = "cochavi.zohar@protonmail.com" }]
dependencies = [
    "gitpython>=3.1.43",
    "fastapi[standard]>=0.112.0",
    "python-frontmatter>=1.1.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/dear_diary"]

[tool.rye.scripts]
devserver = "fastapi dev main.py --reload"
