[project]
name = "dear-diary"
version = "0.3.0"
description = "A simple diary application."
authors = [{ name = "Zohar Cochavi", email = "cochavi.zohar@protonmail.com" }]
dependencies = [
    "gitpython>=3.1.43",
    "fastapi[standard]>=0.112.0",
    "python-frontmatter>=1.1.0",
    "parsedatetime>=2.6",
]
readme = "README.md"
requires-python = ">= 3.12"

[project.scripts]
start-dev = "python -m dear_diary"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["dear_diary"]

[tool.rye.scripts]
devserver = "dear_diary"
